# andersen-ev

./: .gitignore  LICENCE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  release-test.yml  release.yml  test-python-publish.yml
andersen_ev/: __init__.py  andersen.py  auth.py
andersen_ev/schema/: andersen.graphql
assets/: asset.txt
examples/: config.py  is-connected.py  konnect-query.py  konnect-status.py  konnect_mobile.py
src/andersen_ev/: __init__.py  andersen.py  mobile.py  requirements.txt
src/andersen_ev/schema/: andersen.graphql
tests/: README.md  requirements.txt  test_andersen_ev.py
tests/schemas/: ChargeStatus.json  DeviceInfo.json  DeviceStatus.json  DeviceStatusFull.json  get_current_user_devices.json  get_device_status.json
